--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+
+/public/img/user/profile/*
+/public/img/invitation/*
+
+
+/public/img/user/profile/*.png
+/public/img/user/profile/*.jpg
+/public/img/user/profile/*.jpeg
